@@ -1,3 +1,8 @@
+2015-10-27  Hristian Kirtchev  <kirtchev@adacore.com>
+
+	* lib-xref-spark_specific.adb, a-dirval-mingw.adb, exp_ch6.adb,
+	sem_ch8.adb, s-os_lib.adb: Minor reformatting.
+
 2015-10-27  Yannick Moy  <moy@adacore.com>
 
 	* lib-xref-spark_specific.adb
